<resources>
    <string name="app_name">Finishit</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="mobile_hint">Enter your mobile number</string>
    <string name="continue_btn">Continue</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="action_logout">Logout</string>
    <string name="assign_task">Assign Task</string>
    <string name="todo">TODO</string>
    <string name="help">Help</string>
</resources>
