<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_logo"
            android:contentDescription="@string/todo" />



    </RelativeLayout>


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:digits="0123456789"
        android:hint="@string/mobile_hint"
        android:inputType="phone"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="#cdd8f1" />

    <EditText
        android:id="@+id/editCodeText"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:ems="10"
        android:hint="@string/otp_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:visibility="invisible"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextPhone"
        android:layout_toStartOf="@+id/editTextPhone"
        android:text="+91"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:hint="Your Name"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:textAlignment="center" />


</RelativeLayout>