<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtSpeechInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"

        android:textColor="@color/bg_gradient_start"
        android:textSize="26sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="165dp"
        android:layout_height="107dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ico_mic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tap_on_mic"
            android:textColor="@color/bg_gradient_start"
            android:textSize="15dp"
            android:textStyle="normal" />
    </LinearLayout>



    <Button
        android:id="@+id/sendToWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/assign_task"
        android:visibility="invisible" />


    <ImageButton
        android:id="@+id/whatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="14dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_whatsapp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="196dp"
        android:text="How finish-it can save your time today?"
        android:textAlignment="center"
        android:textSize="18sp" />


</RelativeLayout>